feat: PostgreSQL/JPA persistence, auth refresh/quota, and SuperAgent SSE fix
Add Flyway schema + JPA stores, account/refresh-token auth with daily quota,
HITL/eval/collaboration endpoints, and fix Manus SSE empty-reply false errors.

Co-authored-by: Cursor <cursoragent@cursor.com>